--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- Sideindhold -->
     <main>
         <h1>Om os</h1>
-        <p>Velkommen til vores hjemmeside. Her kan du læse om os og vores stald.</p>
+        <p>Velkommen til vores hjemmeside din gøgler. Her kan du læse om os og vores stald.</p>
     </main>
 
 </body>
