--- a/opstaldning.html
+++ b/opstaldning.html
@@ -25,22 +25,32 @@
 
    
 
-    <!-- Sideindhold -->
-    <main>
-        <h1>Opstaldning</h1>
-    <p>Opstaldning på Mindegården sker i henhold til vores kontrakt:</p>
+   <!-- Sideindhold -->
+<main>
+    <h1>Opstaldning</h1>
 
     <p>
-        <a href="Pdf/OpstaldningskontraktMindegaardenBoks2025.pdf" target="_blank" class="pdf-link">
+        Opstaldning på Mindegården sker i henhold til vores kontrakt:
+    </p>
+
+    <p>
+        <a href="https://qsxwd92kkr-arch.github.io/Pdf/OpstaldningskontraktMindegaardenBoks2025.pdf" 
+           target="_blank" 
+           class="pdf-link">
             📄 Klik her for at åbne PDF-filen
         </a>
     </p>
-<p>Varer og ydelser tilkøbes via mobilepay:</p>
- <!-- Billede efter teksten -->
+
+    <p>
+        Varer og ydelser tilkøbes via MobilePay:
+    </p>
+
+    <!-- Billede efter teksten -->
     <div class="mobilepay-image">
-        <img src="images/gallery/qr kode.jpg" alt="MobilePay QR kode" />
+        <img src="images/gallery/qr_kode.jpg" alt="MobilePay QR kode">
     </div>
-    </main>
+</main>
+
 
 
 
