--- a/opstaldning.html
+++ b/opstaldning.html
@@ -34,7 +34,7 @@
     </p>
 
     <p>
-        <a href="https://qsxwd92kkr-arch.github.io/Pdf/OpstaldningskontraktMindegaardenBoks2025.pdf" 
+        <a href="Pdf/OpstaldningskontraktMindegaardenBoks2025.pdf" 
            target="_blank" 
            class="pdf-link">
             📄 Klik her for at åbne PDF-filen
